# pharmassist-synthdata

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
fixtures/: seed_000042.json  seed_000043.json  seed_000044.json
fixtures/ocr_suite/: case_000042.json  case_000043.json  case_000044.json  case_lowinfo_000102.json  case_redflag_000101.json
fixtures/rx_pdf_suite/: manifest.json
src/pharmassist_synthdata/: __init__.py  case_bundle.py  catalog.py  cli.py  generate.py  ocr_text.py  patient.py  prescription_pdf.py  sim_year.py  validate.py
src/pharmassist_synthdata/contracts/: __init__.py  load_schema.py
src/pharmassist_synthdata/contracts/schemas/: _meta.schema.json  intake_extracted.schema.json  llm_context.schema.json  product.schema.json  recommendation.schema.json
tests/: test_case_templates.py  test_determinism.py  test_generate_case.py  test_ocr_suite_valid.py  test_ocr_text_determinism.py  test_prescription_pdf_suite.py  test_schema_compat.py  test_sim_year.py
